@@ -34,12 +34,6 @@
 			});
 
 			this.callParent(arguments);
-		},
-
-		listeners: {
-			show: function (panel, eOpts) {
-				this.delegate.cmfg('onPanelGridAndFormFilterAdvancedFilterEditorAttributesViewShow');
-			}
 		}
 	});
 
