@@ -31,12 +31,6 @@
 			});
 
 			this.callParent(arguments);
-		},
-
-		listeners: {
-			show: function (panel, eOpts) {
-				this.delegate.cmfg('onWorkflowTreeFilterAdvancedFilterEditorAttributesViewShow');
-			}
 		}
 	});
 
